--- a/views/index.hbs
+++ b/views/index.hbs
@@ -255,7 +255,7 @@
         <script>
             StackElections.init({
                 apikey: 'LYwuXpduJM2Kk9Twsc008w((',
-                selectedBadges: ['Deputy', 'Civic Duty', 'Convention', 'Strunk & White', 'Electorate', 'Sportsmanship', 'Pundit', 'Copy Editor', 'Outspoken'],
+                selectedBadges: ['Deputy', 'Civic Duty', 'Convention', 'Strunk & White', 'Electorate', 'Sportsmanship', 'Pundit', 'Copy Editor', 'Outspoken', 'Custodian', 'Reviewer', 'Steward'],
                 badges: {{{badges}}}
             });
         </script>
